
2006-10-12 cjg
 * Added a new input_style to set which shows the items as a short list
    of radio buttons.
 * Made most sets use this input style.

2006-10-13 cjg
 * Fixed bug in render-set-long
 * Added xml tidy to pins so that we can debug the HTML. This needs to
    become a config option.
 * Show/Hide of help, subjects and collapsed components now uses animation.
 * Help for multiple components is now inlined into the table.
 * Moved js files around so they load in the right order.
 * Put dotted lines between elements in multi-component.
 * Removed the "may be ommited" text from date input.

2006-10-13 cjg
 * Added warning on running scripts as root.

2006-10-16 cjg
 * Removed code which checks we're not running as root, and removed code
    that tries to do a change uid if we're root. Even if it works, the taint
    flag still applies.

2006-10-16 cjg
 * Fixed a bug that stopped you logging out.

2006-10-16 cjg
 * Rewrote document security to use rewrite rules not symlinks!
 * Removed concept of "areas" in apache security
 * Removed the secure/ dir as this was just used for symlinks
 * Documents URLs are now /444/1/ not /444/01/ but the old style will 
    redirect and the filesystem still uses "01" not "1".
 * Added pos to Document and Subscription. This will be used to order them.
 * Added documentid counter to generate unique ID's for documents
 * Documents now use integer to acutally identify themselves.
 * Removed support for not short_urls 
 
2006-10-16 cjg
 * Fixed minor bug in javascript tabs caused by the "tidy" HTML output.

2006-10-16 moj
 * Converted all subs in cfg.d to be $c->{mysub} = sub
 * Converted Repository::call and can_call to handle this
 * Converted most &{...} calls to use Repository::call - some still need
     changing, but will need an alteration to the call method.
 * Added some missing phrases to system.xml
 * Added missing namespace info to epadmin

2006-10-16 cjg
 * Indexer now updates .pid every "tick"